--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,10 @@
     margin: 0px;
 }
 
-.Header{
-    margin: 10px 0px 0px 10px;
+.header{
+    text-align: center;
+    text-transform: uppercase;
+    padding: 20px;
+    background-color: black;
+    color: white;
 }
