--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,12 @@
     background-color: black;
     color: white;
 }
+
+.addButton{
+    text-align: center;
+    padding: 12px;
+    background-color: rgb(36, 199, 36);
+    color: white;
+    border: none;
+    width: 80px;
+}
